# stuff

AlignmentKinect/: QuartenionConversions.m  eulerToQuartenion.m  plottheData.m  quartenionToEulerZYX.m
Code for robot/1/: CMakeLists.txt  CMakeLists.txtVB
Code for robot/1/sourcefiles/: cartesian_impedance_control.cpp  miscFunctions.cpp  myTimer.cpp  newmatrix.cpp
Gaussian Process Linux/: CMakeLists.txt
Gaussian Process Linux/VSProject/: gaussian.sln  gaussian.vcxproj  gaussian.vcxproj.filters  trajectory  trajectory3
Gaussian Process Linux/sourcefiles/: Sonig.cpp  Sonig.h  Source.cpp  miscFunctions.h  newmatrix.cpp  newmatrix.h
MATLAB Gaussian Process/: Vfu_mean  executionspeedtest.m  main.m  sonigV.hyp.lx  trajectoryV  trajectoryX  untitled.m  untitled.prj
MATLAB Gaussian Process/SONIG/: PlotScript.m
MATLAB Gaussian Process/data/: Untitled.m  sonigVall.mat  sonigVdiff.mat  sonigVsimiliar.mat  sonigVsimoptimized.mat  sonigXall.mat  sonigXdiff.mat  sonigXsimiliar.mat  sonigXsimoptimized.mat  sonigXwotime.mat  testdataclass1.mat  traindataallclass1.mat  traindatadiffclass17.mat  traindatasim.mat
MATLAB Gaussian Process/scripts/: differentclass.m  gui.fig  gui.m  sameclassalltrajectories.m  similiartrajectories.m  simoptimized.m  trainSonigV.m  trainSonigX.m  withouttime.m
Preprocessing scripts/: Pre_Proc.m  Pre_Proc_0703.m  Rotation_YZX.m  Rotation_ZYX.m
Robot Test Function/: CMakeLists.txt
Robot Test Function/VSProject/: robotTests.sln  robotTests.vcxproj  robotTests.vcxproj.filters  trajectory2  trajectoryY  trajectoryZ
Robot Test Function/VSProject/sonig/: XKuu
Robot Test Function/sourcefiles/: Sonig.cpp  Source.cpp  miscFunctions.cpp  miscFunctions.h  newmatrix.cpp  trajectoryGeneration.cpp  trajectoryGeneration.h
myLibrary/: Source.cpp  miscFunctions.cpp  miscFunctions.h  myTimer.h  trajectoryGeneration.h
(+45 files in other folders)
